<resources>
    <string name="app_name">StoryApp</string>
    <string name="gambar_welcome">gambar welcome</string>
    <string name="copy_right">© 2021 Dicoding</string>
    <string name="signup">SignUp</string>
    <string name="name">Name</string>
    <string name="edit_name_hint">Text your name</string>
    <string name="invalid_email">Format email is invalid!</string>
    <string name="min_length_char">Minimal Length %1$d characters</string>
    <string name="email">Email</string>
    <string name="em_hint">Text your email</string>
    <string name="password">Password</string>
    <string name="pass_hint">Text Your Password</string>
    <string name="ask_account">already have an accuont ?</string>
    <string name="login">Login</string>
    <string name="ask_signup">Don\'t have an account ?</string>
    <string name="tv_login">Login</string>
    <string name="ask_login">Don\'t have an acccount?</string>
    <string name="sign_up">Sign Up</string>
    <string name="gambar_avatar">gambar avatar</string>
    <string name="username">Username</string>
    <string name="description">Description</string>
    <string name="add_story">Add story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="desc_hint">Text description</string>
    <string name="upload">Upload</string>
    <string name="detail_image">Detail image</string>
    <string name="message_validation">Enter your %1$s</string>
    <string name="signup_error">Signup failure, please try again!</string>
    <string name="login_error">Login failure, please try again!</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="permission_denied">Can\'t get permission</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="input_your_image">Please upload your image first!</string>
    <string name="created_at">Created At</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="share_my_location">Share My Location</string>
    <string name="location_not_found">Location is not found. Try Again</string>
    <string name="my_location">My Location</string>
    <string name="map_style_error">Style parsing failed.</string>
    <string name="map_style_nope">\"Can\'t find style. Error: \"</string>
    <string name="retry">Retry</string>
    <string name="timeout">Timeout</string>
</resources>