<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignupActivity">

    <ImageView
        android:id="@+id/image_welcome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/gambar_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideine_horizontal_1"
        app:layout_constraintBottom_toTopOf="@+id/guideine_horizontal_2"
        app:srcCompat="@drawable/image_welcome" />

    <TextView
        android:id="@+id/tv_signup"
        android:alpha="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/signup"
        android:textAlignment="center"
        style="@style/text_style_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideine_horizontal_2" />

    <TextView
        android:id="@+id/tv_name"
        android:alpha="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="@+id/tv_signup"
        app:layout_constraintStart_toStartOf="@+id/tv_signup"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup" />

    <com.fuad.storyapp.customview.NameEditText
        android:id="@+id/edit_name"
        android:alpha="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_name_hint"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_signup"
        app:layout_constraintStart_toStartOf="@+id/tv_signup"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        android:drawableStart="@drawable/ic_baseline_person_24"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/edit_name"
        app:layout_constraintStart_toStartOf="@+id/edit_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

    <com.fuad.storyapp.customview.EmailEditText
        android:id="@+id/edit_email"
        android:alpha="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/em_hint"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_email"
        app:layout_constraintStart_toStartOf="@+id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        android:drawableStart="@drawable/ic_baseline_email_24"/>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="@+id/edit_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <com.fuad.storyapp.customview.PasswordEditText
        android:id="@+id/edit_password"
        android:alpha="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/pass_hint"
        app:layout_constraintEnd_toEndOf="@+id/tv_password"
        app:layout_constraintStart_toStartOf="@+id/tv_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_signup"
        android:alpha="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/navi"
        android:text="@string/signup"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_signup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_signup"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"/>

    <TextView
        android:id="@+id/tv_ket"
        android:alpha="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ask_account"
        app:layout_constraintStart_toStartOf="@+id/tv_signup"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

    <TextView
        android:id="@+id/tv_login"
        android:alpha="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/navi"
        app:layout_constraintEnd_toEndOf="@+id/tv_signup"
        app:layout_constraintStart_toEndOf="@+id/tv_ket"
        app:layout_constraintTop_toTopOf="@+id/tv_ket" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideine_horizontal_1"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.05"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideine_horizontal_2"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.30"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/copyrightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/copy_right"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/view_progressbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        android:background="@color/transparent_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>